[package]
name = "inka-raydium-provider"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.8.0"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-math = { version = "0.1", path = "./libraries/math", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"
solana-frozen-abi = "=1.8.0"
zeroize = "=1.3.0"
safe-transmute = "0.11.2"
bytemuck = "1.7.2"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"

[lib]
crate-type = ["cdylib", "lib"]